--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,11 @@ body {
 }
 
 header {
-    width: 100%;
-    height: 500px;
-    background: var(--orange);
+  width: 100%;
+  height: 500px;
+  background-image: url(../images/cars/estrada.webp);
+  background-image: no-repeat;
+  background-size: cover;
   }
   
   .content {
