--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,17 @@ header {
     align-items: center;
     justify-content: center;
   }
+
+#texto {
+  width: 700px;
+  height: 50px;
+  border: none;
+  border-radius:4px 0px 0px 4px;
+  text-indent: 20px;
+  text-indent: left;
+  cursor: pointer;
+
+}
   
   .search-input {
     width: 700px;
