Mudança na opacidade da Ferrari-Portofino

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@ header {
     font-weight: bold;
     border-radius: 4px;
   }
+
+.ferrari {
+    filter: opacty(50%);
   
   nav ul {
     display: flex;
